# djgramm

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  .gitlab-ci.yml  .prettierignore  README.md  TASK_COMPLETION_REPORT.md  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js  webpack.config.js
.cursor/: djgramm-implementation-plan.md
.cursor/rules/: cursor-rules.mdc  python-django-rules.mdc
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.prod  entrypoint.sh  nginx.conf
docs/: DJANGO_DEBUG_TOOLBAR_GUIDE.md  PROD_STYLING_TEST_REPORT.md  TASK12_PLAN.md  TASK13_PLAN.md  TASK14_PLAN.md  TASK15_PLAN.md  UML.drawio  UML_SCHEMA.md  _uml.puml
frontend/src/css/: main.css
frontend/src/js/: feed.js  follow.js  index.js  post_detail.js  post_form.js  theme.js
frontend/tests/utils/: ajax.test.js  csrf.test.js  dom.test.js  errorHandler.test.js  eventManager.test.js
scripts/: analyze_frontend.sh  check_favicon.sh  check_prod_css.sh  collect_frontend_metrics.sh  fix_comment_input.sh  seed_data.py  test_ci_locally.bat  test_ci_locally.sh  test_ci_with_docker.sh  test_js_loading.sh  test_local_docker.sh  test_prod_styling.sh  test_user_deletion.py  verify_prod_build.sh
src/: coverage.xml
src/app/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  pipeline.py  services.py  signals.py  urls.py  views.py
src/app/migrations/: 0001_initial.py  0002_add_comment_model.py  0003_follow.py  0004_user_following_alter_follow_follower_and_more.py  0005_profile_last_news_feed_visit.py  0006_alter_postimage_image_alter_profile_avatar.py  __init__.py
src/app/templatetags/: app_tags.py
src/config/: settings.py  urls.py  wsgi.py
src/static/css/: style.css
src/static/js/: feed.js  follow.js  post_detail.js  post_form.js
src/staticfiles/js/: main.js
src/templates/: base.html
tests/: conftest.py  factories.py  test_cloudinary.py  test_models.py  test_oauth.py  test_services.py  test_static_files.py  test_views.py
(+22 files in other folders)
