[project]
name = "djgramm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.8",
    "pillow>=12.0.0",
]
[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]