[project]
name = "djgramm"
version = "0.1.0"
description = "Instagram-like photo sharing application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.8",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
    "whitenoise>=6.6.0",
    "dj-database-url>=2.1.0",
    "cloudinary>=1.36.0",
    "django-cloudinary-storage>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "factory-boy>=3.3.0",
    "django-debug-toolbar>=4.3.0,<5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/app"]
omit = ["*/migrations/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 79
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
